feat: Agregando registro y login jwt
